concord_macros/tests/dsl/fail/fail_rate_limit_zero_max.stderr
error: rate_limit max must be greater than zero
  --> tests/dsl/fail/fail_rate_limit_zero_max.rs:10:17
   |
10 |                 0 / 1s
   |                 ^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_rate_limit_zero_max.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
